refactor: address design smells in WeblogEntry.java